--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "backend-catalogo",
   "version": "1.0.0",
   "description": "API REST CATALOGO",
-  "main": "src/index.js",
+  "main": "index.js",
   "type":"module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node --watch src/index.js"
+    "dev":"node --watch index.js"
   },
   "keywords": [],
   "author": "Byron Guamán",
